# Senbonzakura

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/senbonzakura/: diagnostic_reporter.hpp  file_scanner.hpp  file_writer.hpp  lexer.hpp  parser.hpp  token.hpp  token_type.hpp
lib/src/: diagnostic_reporter.cpp  file_scanner.cpp  file_writer.cpp  lexer.cpp  parser.cpp  token.cpp  token_type.cpp
scripts/: reconfigure_and_build_cmake.sh
tests/: CMakeLists.txt  diagnostic_reporter_test.cpp  file_scanner_test.cpp  file_writer_test.cpp  lexer_test.cpp  parser_test.cpp  token_test.cpp  token_type_test.cpp
tests/test_data/lexer/: test_1.eta  test_2.eta
